public/stylesheets/main.css
.navbar .container-fluid {
    padding: 0 40px;
}
.container-fluid {
    margin: auto 5%;
}

.container-fluid h1 {
    padding-left: 25px;
}

.food-item {
    border: 1px solid #c5c5c5;
    padding: 0;
    padding-left: 16px;
    margin: 10px;
}

.navbar-fixed {
    top: 51px;
}

#content {
    margin-top: 51px;
}

